[project]
name = "erever"
version = "0.1.0"
description = "A CLI tool for reversing EVM bytecodes, optimized for solving CTF challenges. Currently experimental and developed for personal use."
authors = [{ name = "minaminao", email = "minaminaoy@gmail.com" }]
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "pycryptodome>=3.20.0",
    "web3>=7.2.0",
    "aiohttp>=3.9.1",
    "setuptools>=74.1.2",
    "cbor2>=5.5.1",
    "base58>=2.1.1",
    "rlp>=3.0.0",
]
requires-python = ">=3.12"

[project.scripts]
erever = "erever.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
dev-dependencies = [
    "pytest>=8.3.3",
    "mypy>=1.11.2",
    "isort>=5.13.2",
]

[tool.rye.scripts]
fix = { chain = ["fmt", "lint:fix"] }
fmt = "rye fmt"
"lint:fix" = "rye lint --fix"
"type-check" = "rye run mypy ."
"type-check-strict" = "rye run mypy . --strict"
precommit = { chain = ["fix", "type-check-strict"] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
